added profile pic

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,3 +1,16 @@
+.profile-image-cntr { 
+  margin-right: 15px;
+  float: left;
+}
+
+.profile-image {
+  height: 170px;
+  width: 120px;
+  display: inline-block;
+  border-radius: 10%;
+  cursor: pointer;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -84,7 +97,14 @@ sup {
 }
 img {
   border-style: none;
+  box-shadow: 0px 0px 2px 2px darkorchid;
+  transition: all 300ms;
 }
+
+img:hover {
+  box-shadow: 0px 0px 1px 1px black;
+}
+
 svg:not(:root) {
   overflow: hidden;
 }
