--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("../../fonts/Montserrat-Light.ttf");
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url("../../fonts/Montserrat-Bold.ttf");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: OpenSans;
+  src: url("../../fonts/OpenSans-Light.ttf");
+}
+
+@font-face {
+  font-family: OpenSans;
+  src: url("../../fonts/OpenSans-Bold.ttf");
+  font-weight: bold;
+}
+
+p, li {
+  font-family: 'OpenSans'
+}
+
+
 .certification-grid-cntr {
   margin-top: 100px;
   width: 100%;
@@ -19,11 +46,13 @@
 .card {
   display: grid;
   box-shadow: 0 0 2px 2px black;
+  cursor: pointer;
 }
 
-.card caption {
+.card h5 {
   font-size: 1rem;
   text-align: center;
+  color: #01B6AD;
 }
 
 .card:hover {
@@ -871,6 +900,11 @@ h6 {
   font-size: 0.78405rem;
   line-height: 1.1;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat';
+}
+
 hgroup {
   margin-left: 0;
   margin-right: 0;
